AssetTracker/force-app/main/default/objects/Stock_Item__c/Stock_Item__c.object-meta.xml
<CustomObject>
    <label>Stock Item</label>
    <pluralLabel>Stock Items</pluralLabel>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>