AssetTracker/force-app/main/default/objects/Stock_Item__c/fields/Last_Checked__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked__c</fullName>
    <label>Last Checked</label>
    <type>DateTime</type>
    <description>Timestamp of the last stock-level scan.</description>
</CustomField>