AssetTracker/force-app/main/default/objects/Stock_Item__c/fields/Needs_Reorder__c.field-meta.xml
<CustomField>
    <fullName>Needs_Reorder__c</fullName>
    <label>Needs Reorder</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set by the StockLevelBatch job when stock is at or below the reorder point.</description>
</CustomField>