AssetTracker/force-app/main/default/objects/Stock_Item__c/fields/Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_On_Hand__c</fullName>
    <label>Quantity On Hand</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>