AssetTracker/force-app/main/default/objects/Stock_Item__c/fields/Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Point__c</fullName>
    <label>Reorder Point</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <description>When quantity on hand falls to or below this, the item is flagged for reorder.</description>
</CustomField>