AssetTracker/force-app/main/default/objects/Stock_Item__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <label>Stock Status</label>
    <type>Picklist</type>
    <description>Maintained by the nightly StockLevelBatch job.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
                <default>true</default>
                <label>In Stock</label>
            </value>
            <value>
                <fullName>Low Stock</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>