AssetTracker/force-app/main/default/objects/Stock_Item__c/validationRules/Quantity_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Not_Negative</fullName>
    <active>true</active>
    <description>Quantity on hand cannot be negative.</description>
    <errorConditionFormula>Quantity_On_Hand__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity_On_Hand__c</errorDisplayField>
    <errorMessage>Quantity on hand cannot be negative.</errorMessage>
</ValidationRule>