AssetTracker/force-app/main/default/objects/Stock_Item__c/validationRules/Reorder_Point_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Reorder_Point_Not_Negative</fullName>
    <active>true</active>
    <description>Reorder point cannot be negative.</description>
    <errorConditionFormula>Reorder_Point__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Reorder_Point__c</errorDisplayField>
    <errorMessage>Reorder point cannot be negative.</errorMessage>
</ValidationRule>